# music_backed

./: Dockerfile  README.md  docker-compose.yaml  env_example  pyproject.toml
migrations/: env.py
migrations/versions/: 278c0ec3354e_.py  2a6e2f691e4e_.py  7a94e94fc78b_.py  7cd868130a07_.py  8a304a6b97fa_.py  95cb5573aa24_.py  a5817b74b0b5_.py  afbeed694326_.py  f31e7e21ce02_.py
source/: CRUD_schemes.py  Core.py  binders_models.py  database.py  exceptions.py  main.py  settings.py
source/SQL/: music.py
source/jwt/: models.py  schemes.py
source/music/: crud.py  models.py  router.py  schemes.py
source/music/services/: add_current_user.py  find_music.py  hashed.py  upload_music.py
source/musics/: crud.py  models.py  router.py  schemes.py  services.py
source/musics/root_depend/: router.py  services.py
source/smtp/: models.py  schemes.py
source/users/: crud.py  models.py  router.py  schemes.py
source/users/admin/: router.py  services.py
source/users/auth_user/: router.py  service.py
source/users/create/: router.py  service.py
source/users/moderation/: router.py  services.py
source/users/services/: auth_user.py  create_user.py  current_user.py  dependencies.py  forgot_user.py  password.py
source/users/user_information/: router.py  services.py
