[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["molodost-vnutri <90547216+molodost-vnutri@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = "^2.0.32"
passlib = "^1.7.4"
PyJWT = "^2.9.0"
alembic = "^1.13.2"
uvicorn = "^0.30.6"
fastapi = "^0.112.1"
asyncpg = "^0.29.0"
pydantic-settings = "^2.4.0"
email-validator = "^2.2.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
